fix emoticon font size
worked last night, now using a different font for some reason which is
too big

--- a/css/_control-plane-questions.scss
+++ b/css/_control-plane-questions.scss
@@ -1,6 +1,6 @@
 #control-plane-poll {
     div {
-        font-size: 8em;
+        font-size: 6em;
         margin: 6%;
         float: left;
     }
